nctbmb and concirege page responsive complete

--- a/components/ForgetPassword/ForgetPassword.module.css
+++ b/components/ForgetPassword/ForgetPassword.module.css
@@ -3,7 +3,6 @@
     opacity: 1;
     transition: all ease-in-out 500ms;
     animation: passwordShow 500ms linear forwards;
-
 }
 
 @keyframes passwordShow {
@@ -24,7 +23,6 @@
     animation: passwordHide 500ms linear forwards;
 }
 
-
 @keyframes passwordHide {
 
     form {
@@ -32,24 +30,39 @@
         opacity: 1;
         z-index: 100;
         visibility: visible;
-
     }
 
     to {
         opacity: 0;
         z-index: 0;
         visibility: hidden;
-
     }
 }
 
-
-
-
 .modelHide {
-
     opacity: 0;
     display: none;
     transition: all 3s ease-in-out;
+}
 
+@media (max-height:500px) {
+
+    .backBtn {
+        padding-bottom: 0px !important;
+    }
+
+    .title {
+
+        padding: 4px 0px 4px 0px !important;
+    }
+
+    .newPassword {
+
+        padding: 2px 0px 2px 0px !important;
+    }
+
+    .nextBtn {
+
+        margin: 12px 0px 12px 0px !important;
+    }
 }
