--- a/components/TeacherLounge/TeacherLounge.module.css
+++ b/components/TeacherLounge/TeacherLounge.module.css
@@ -36,8 +36,7 @@
 /* media query */
 
 
-@media screen and (max-height: 500px),
-screen and (max-height: 700px) {
+@media (max-height: 700px) {
 
 
     .openModel {
@@ -49,8 +48,6 @@ screen and (max-height: 700px) {
 
 
     }
-
-
 
     @keyframes ModelOpen {
 
@@ -67,10 +64,10 @@ screen and (max-height: 700px) {
         100% {
 
             bottom: 15%;
-            right: 50%;
+            right: 40%;
 
             opacity: 1;
-            width: 400px;
+            width: 350px;
         }
     }
 
@@ -112,6 +109,46 @@ screen and (max-height: 700px) {
 
             opacity: 1;
             width: 320px;
+        }
+    }
+
+
+}
+
+@media screen and (max-width: 1280px) {
+
+
+    .openModel {
+
+        animation: ModelOpen 500ms ease forwards;
+        transition: all ease-in-out 1s;
+        display: block;
+        position: absolute;
+
+
+    }
+
+
+
+    @keyframes ModelOpen {
+
+
+        0% {
+
+            bottom: 0;
+            right: 0;
+            opacity: 0;
+            width: 350px;
+        }
+
+
+        100% {
+
+            bottom: 18%;
+            right: 38%;
+
+            opacity: 1;
+            width: 370px;
         }
     }
 
@@ -184,11 +221,7 @@ screen and (max-height: 700px) {
         transition: all ease-in-out 1s;
         display: block;
         position: absolute;
-
-
     }
-
-
 
     @keyframes ModelOpen {
 
@@ -218,9 +251,6 @@ screen and (max-height: 700px) {
         transition: all ease-in-out 500ms;
         position: absolute;
         z-index: 0;
-
-
-
     }
 
     @keyframes ModelClose {
@@ -233,9 +263,6 @@ screen and (max-height: 700px) {
             visibility: visible;
             opacity: 1;
             width: 600px;
-
-
-
         }
 
 
@@ -327,4 +354,28 @@ screen and (max-height: 700px) {
         transform: translateX(-0px);
         opacity: 0;
     }
+}
+
+
+.imgTech {
+
+    position: fixed !important;
+
+    top: 45% !important;
+    right: 12.5% !important;
+
+}
+
+
+@media (max-width:1024px) {
+
+    .imgTech {
+
+        position: fixed !important;
+
+        top: 50% !important;
+        right: 10% !important;
+
+    }
+
 }
